--- a/rep01.html
+++ b/rep01.html
@@ -31,9 +31,10 @@
       <img src="art.png" alt="アート" width="50%" height="50%">
       <div>
         1.内容<br>
-        スクラッチを使って線を書くプログラムを。<br>
+        スクラッチを使って線を書くプログラムを作成した。最初に線を消しペンを上げて盤面を綺麗にする。そしてcat（スプライト）の座標を（0,-75）にする。次にペンの色を水色にし、ペンの太さを4にしてペンを下ろす。スプライトを100歩動かし、－200歩動かし、また100歩動かし、25度回転させる。これを37回繰り返す。さらに200歩動かし、－400歩動かし、また200歩動かし、50度回転させるこれを90回繰り返して幾何学的な絵を描いた。
+　　　　<br>
         2.感想<br>
-        感想を自分で書く。<br>
+        高専入学前に体験したものだったので比較的簡単にプログラムすることができた。オリジナルのプログラムを作るのは難しかったけど、少し数値を変えるだけでできる絵が全然違っていたので少しずつ調整するのは楽しかった。<br>
       </div>
     </div>
 
@@ -42,7 +43,7 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        旗が押されたときにスコアボードの点数を0にしてスプライト1（cat）の座標を（－120，－90）にする。そしてスプライト2（apple）に触れたら点数が1ずつ加算される。左矢印を押したときに左へ10歩ずつ動き、右矢印を押したときには右へ10歩ずつ動く。<br>
         2.感想<br>
         かんそうかんそう<br>        
       </div>
