--- a/rep01.html
+++ b/rep01.html
@@ -43,9 +43,9 @@
       <img src="game.png" alt="ゲーム" width="50%" height="50%">
       <div>
         1.内容<br>
-        旗が押されたときにスコアボードの点数を0にしてスプライト1（cat）の座標を（－120，－90）にする。そしてスプライト2（apple）に触れたら点数が1ずつ加算される。左矢印を押したときに左へ10歩ずつ動き、右矢印を押したときには右へ10歩ずつ動く。<br>
+        旗が押されたときにスコアボードの点数を0にしてスプライト1（cat）の座標を（－120，－90）にする。そしてスプライト2（apple）に触れたら点数が1ずつ加算される。左矢印を押したときに左へ10歩ずつ動き、右矢印を押したときには右へ10歩ずつ動く。スプライト2（apple）はランダムな速度で落ちてくる。このようなミニゲームを作った。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        小学生の時にスクラッチを使って自分だけのミニゲームを作ったけど、説明がほとんどなかったから簡単なものしか作れなかった。でも今回の実習で少し複雑なプログラミングができるようになってよかった。<br>        
       </div>
     </div>
 
@@ -55,9 +55,9 @@
         <!-- 下のyourIDを 自分のIDに書き替える↓ -->
         <a href="https://MK-79.github.io/web/">私のホームページ</a><br>
         1.内容<br>
-        ないようないよう<br>
+        githubを使って簡単な自己紹介文を書いてあるホームページを作った。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        ネット上でサイトがたくさんあるからホームページも作るのは簡単だと思っていたけど本当に作るのが簡単で驚いた。<br>        
       </div>      
     </div>
 
