--- a/rep02.html
+++ b/rep02.html
@@ -30,10 +30,9 @@
       <h3>2-1 2週目のレポートをHTMLで作る</h3>
       <div>
         1.内容<br>
-        ないようないよう<br>
+        githubを用いてrep02.htmlをさくせいした。<br>
         2.感想<br>
-        かんそうかんそう<br>
-        3. 2週目が完成した人は1週目のレポートも完成させる<br>
+        html方式にして作る方法を知れてこれからの役に立ちそうだと思った。<br>
       </div>
     </div>
 
@@ -42,9 +41,9 @@
       <img src="ml.png" alt="ML" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Teachable Machineを使ってじゃんけんのぐーやぱーをいろんな角度から撮って手の形覚えさせた。<br>
         2.感想<br>
-        かんそうかんそう<br>        
+        入学前にも1度体験させていただいた内容だったのでスムーズできた。br>        
       </div>
     </div>
     
@@ -54,9 +53,9 @@
       <img src="roblox.png" alt="RBLX" width="50%" height="50%">
       <div>
         1.内容<br>
-        ないようないよう<br>
+        VRゴーグルを用いてWorkroomsやRobloxをプレイした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        初めてVRゴーグルを使ってアプリを使用したのでわからないところも多かったけど慣れたら本当にVR空間で何でもできそうだと思った。<br>
       </div>
     </div>
     
