--- a/rep03.html
+++ b/rep03.html
@@ -31,9 +31,9 @@
       <a href="https://Mk-79.github.io/web/vr.html">自作した３次元空間</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        A-frameのテンプレートのプログラミングをコピーしてWebプログラミング道場にペーストしてVR空間を作った。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        今回はコピペしただけだからすぐに作れたけど1から自分で考えて作るのはとても難しいと感じた。<br>
       </div>
     </div>
     <div>
@@ -42,9 +42,9 @@
       <a href="https://Mk-79.github.io/web/dengon.html">伝言板</a><br>                                   
       <div>
         1.内容<br>
-        ないようないよう<br>
+        Webプログラミング道場を用いて伝言板をさくせいした。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        本格的なプログラミングが始まったと感じてとても興奮したし、細かいところも解説があったので自分だけのオリジナルのプログラミングを作ってみたいと思った。<br>
       </div>
     </div>
 
@@ -53,9 +53,9 @@
       <img src="interactive.png" alt="JavaScript" width="20%" height="20%"><br>      
       <div>
         1.内容<br>
-        ないようないよう<br>
+         A-frameのテンプレートのプログラミングで作られたVR空間を体験した。<br>
         2.感想<br>
-        かんそうかんそう<br>
+        VR空間内でボールを飛ばしたりオブジェクトをつかんで運んだり出来て本当にいろんなことができるのだと改めて驚いた。<br>
       </div>
     </div>
   
